--- a/app/globals.css
+++ b/app/globals.css
@@ -64,18 +64,9 @@ body {
     background: #141414;
   }
   .mask{
-
-    mask-image: url('../public/gallery/mask1.svg');
-
+    mask-image: url('../public/mask.svg');
     mask-repeat: no-repeat;
-
     mask-size: 40px;
-
-    background: #ec4e39;
-
     position: absolute;
-
-    color: black;
-
   }
 }
